# RenderFramework

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  main.cpp
src/include/: Renderer.hpp
